--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pytest>=8.3.5",
     "pytest-django>=4.11.1",
-    "drf-spectacular"
+    "drf-spectacular",
+    "djangorestframework-simplejwt"
 ]
